--- a/src/app/containers/chat/chat.component.html
+++ b/src/app/containers/chat/chat.component.html
@@ -1,3 +1,82 @@
-<p>
-  chat works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-5">
+      <div class="card">
+        <div class="card-header bg-primary">
+          <span class="fa fa-comment"></span> Chat
+        </div>
+        <div class="card-block">
+          <ul class="chat">
+            <li class="left clearfix"><span class="chat-img pull-left">
+                            <img src="http://placehold.it/50/55C1E7/fff&amp;text=U" alt="User Avatar" class="rounded-circle">
+                        </span>
+              <div class="chat-body clearfix">
+                <div class="header">
+                  <strong class="primary-font">Jack Sparrow</strong>
+                  <small class="pull-right text-muted"><span class="fa fa-clock-o"></span>12 mins ago</small>
+                </div>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                  dolor, quis ullamcorper ligula sodales.
+                </p>
+              </div>
+            </li>
+            <li class="right clearfix">
+              <span class="chat-img pull-right">
+                <img src="http://placehold.it/50/FA6F57/fff&amp;text=ME" alt="User Avatar" class="rounded-circle">
+              </span>
+              <div class="chat-body clearfix">
+                <div class="header">
+                  <small class=" text-muted"><span class="fa fa-time"></span>13 mins ago</small>
+                  <strong class="pull-right primary-font">Bhaumik Patel</strong>
+                </div>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                  dolor, quis ullamcorper ligula sodales.
+                </p>
+              </div>
+            </li>
+            <li class="left clearfix">
+              <span class="chat-img pull-left">
+                <img src="http://placehold.it/50/55C1E7/fff&amp;text=U" alt="User Avatar" class="rounded-circle">
+              </span>
+              <div class="chat-body clearfix">
+                <div class="header">
+                  <strong class="primary-font">Jack Sparrow</strong>
+                  <small class="pull-right text-muted"><span class="fa fa-clock-o"></span>14 mins ago</small>
+                </div>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                  dolor, quis ullamcorper ligula sodales.
+                </p>
+              </div>
+            </li>
+            <li class="right clearfix">
+              <span class="chat-img pull-right">
+                <img src="http://placehold.it/50/FA6F57/fff&amp;text=ME" alt="User Avatar" class="rounded-circle">
+              </span>
+              <div class="chat-body clearfix">
+                <div class="header">
+                  <small class=" text-muted"><span class="fa fa-clock-o"></span>15 mins ago</small>
+                  <strong class="pull-right primary-font">Bhaumik Patel</strong>
+                </div>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                  dolor, quis ullamcorper ligula sodales.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <div class="input-group">
+            <input id="btn-input" type="text" class="form-control form-control-sm" placeholder="Type your message here...">
+            <span class="input-group-btn">
+              <button class="btn btn-warning btn-sm" id="btn-chat">Send</button>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
