--- a/src/app/containers/chat/chat.component.html
+++ b/src/app/containers/chat/chat.component.html
@@ -70,9 +70,9 @@
         </div>
         <div class="card-footer">
           <div class="input-group">
-            <input id="btn-input" type="text" class="form-control form-control-sm" placeholder="Type your message here...">
+            <input type="text" class="form-control form-control-sm" placeholder="Type your message here...">
             <span class="input-group-btn">
-              <button class="btn btn-warning btn-sm" id="btn-chat">Send</button>
+              <button class="btn btn-warning btn-sm" (click)="sendMessage()">Send</button>
             </span>
           </div>
         </div>
