--- a/src/app/containers/chat/chat.component.css
+++ b/src/app/containers/chat/chat.component.css
@@ -25,6 +25,9 @@
   overflow-y: scroll;
   height: 500px;
 }
+p {
+  word-break: break-all;
+}
 /*::-webkit-scrollbar-track {*/
   /*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);*/
   /*background-color: #F5F5F5;*/
