--- a/src/app/containers/chat/chat.component.html
+++ b/src/app/containers/chat/chat.component.html
@@ -5,34 +5,7 @@
         <div class="card-header bg-primary">
           <span class="fa fa-comment"></span> Chat
         </div>
-        <div class="card-block">
-          <ul class="chat" *ngFor="let item of messageList">
-            <li class="left clearfix" *ngIf="item.sender=='you'">
-              <span class="chat-img pull-left">
-                <img src="http://placehold.it/50/55C1E7/fff&amp;text=U" alt="User Avatar" class="rounded-circle">
-              </span>
-              <div class="chat-body clearfix">
-                <div class="header">
-                  <strong class="primary-font">{{item.sender}}</strong>
-                  <small class="pull-right text-muted"><span class="fa fa-clock-o"></span>{{item.date}}</small>
-                </div>
-                <p>{{item.content}}</p>
-              </div>
-            </li>
-            <li class="right clearfix" *ngIf="item.sender=='me'">
-              <span class="chat-img pull-right">
-                <img src="http://placehold.it/50/FA6F57/fff&amp;text=ME" alt="User Avatar" class="rounded-circle">
-              </span>
-              <div class="chat-body clearfix">
-                <div class="header">
-                  <small class=" text-muted"><span class="fa fa-clock-o"></span>{{item.date}}</small>
-                  <strong class="pull-right primary-font">{{item.sender}}</strong>
-                </div>
-                <p>{{item.content}}</p>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <app-chat-content [messageList]="messageList$ | async"></app-chat-content>
         <div class="card-footer">
           <div class="input-group">
             <input type="text" #inputMessage [(ngModel)]="textMessage" class="form-control form-control-sm" placeholder="Type your message here...">
